border gap fix

--- a/src/components/form-component/form-component.css
+++ b/src/components/form-component/form-component.css
@@ -34,6 +34,7 @@
     justify-content:center;
     align-items: center;
     padding: 2rem 0.5rem;
+    border-top: 3px solid var(--primary-01);
 }
 
 .input-box{
