--- a/src/components/text-card-component/text-card.css
+++ b/src/components/text-card-component/text-card.css
@@ -13,6 +13,7 @@
   font-family: "proximanovaregular";
   border-top: 3px solid var(--primary-01);
   border-bottom: 3px solid var(--primary-01);
+  
 }
 .wrapper-body {
   padding-left: 1.5rem;
@@ -72,5 +73,5 @@ p {
 
 .card-img{
     width:100vw;
-   
+    margin-bottom: -0.22rem;
 }
